# codex-ai

./: .gitignore  AGENTS.md  BUG.md  CLAUDE.md  FUN.md  FUN2.md  README.md  TASK.md  index.html  package-lock.json  package.json  扫描的问题.md
.playwright-mcp/: page-2026-04-30T02-27-32-232Z.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  git_bridge.mjs  git_runtime.rs  git_workflow.rs  lib.rs  main.rs  notifications.rs  process_spawn.rs  task_automation.rs  tray.rs  window_event.rs  window_state.rs
src-tauri/src/app/: database.rs  employees.rs  mod.rs  projects.rs  remote.rs  review.rs  sessions.rs  shared.rs  tasks.rs
src-tauri/src/app/tests/: mod.rs  review_and_attachments.rs  runtime_and_paths.rs  sql_and_session.rs  task_lifecycle.rs
src-tauri/src/claude/: claude_sdk_bridge.mjs  manager.rs  mod.rs  settings.rs
src-tauri/src/claude/process/: context.rs  lifecycle.rs  mod.rs  session_runtime.rs  stream.rs
src-tauri/src/codex/: cli.rs  manager.rs  mod.rs  process.rs  sdk_bridge.mjs  secret_store.rs  settings.rs
src-tauri/src/codex/process/: ai_commands.rs  changes.rs  command_builders.rs  context.rs  lifecycle.rs  mod.rs  one_shot.rs  prompts.rs  session_launch.rs  session_runtime.rs  session_support.rs  stream.rs  tests.rs
src-tauri/src/db/: migrations.rs  models.rs
src-tauri/src/opencode/: manager.rs  mod.rs  opencode_sdk_bridge.mjs  settings.rs
src-tauri/src/opencode/process/: context.rs  lifecycle.rs  mod.rs  session_runtime.rs  stream.rs
src-tauri/src/task_automation/: prompt.rs
(+136 files in other folders)
