[package]
name = "codex-ai"
version = "0.3.1"
description = "Codex AI System"
authors = ["you"]
edition = "2021"

[lib]
name = "codex_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
libc = "0.2"
tauri-plugin-notification = "2"
